Changed css and added labels for area chart

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <title>Tourism Vizualization</title>
   </head>
   <body>
-    <!--<script src="https://kit.fontawesome.com/1febaa92db.js" crossorigin="anonymous"></script>-->
+    <script src="https://kit.fontawesome.com/1febaa92db.js" crossorigin="anonymous"></script>
     <div id="root"></div>
   </body>
 </html>
